Match Narration Enhancements (#6)
* Formatting

* Changes to add Cards into the database

* Changes to add Wrestlers into the database

* Add CardSet to the data

* Add Decks to the data

* Update the deck editor

* Add sorting

* Add shows

* Add show views

* Update cards adding new fields and related code

* Initial commit

* Create maven.yml

* Create maven.yml

* Create codeql.yml

* Create codeql.yml

* Create greetings.yml

* Create greetings.yml

* Create label.yml

* Create label.yml

* Create dependency-review.yml

* Create dependency-review.yml

* Create dependabot.yml (#2)

* Create dependabot.yml (#2)

* Delete .github/workflows/label.yml (#3)

* Delete .github/workflows/label.yml (#3)

* RPG System Integration (#1)

* Notion Support

* Add AI support

* Focus on match narration

* Focus on match narration

* Add tests for narration service

* Update dependencies

* Initial commit

* Create maven.yml

* Fix GitHub workflow permissions and improve CI pipeline

- Add required permissions for dependency submission
- Only run dependency submission on main branch pushes
- Add continue-on-error to prevent workflow failure
- Include code formatting and explicit test steps
- Improve workflow robustness

* Configure workflow to run on all branches

- Remove branch restrictions from push and pull_request triggers
- Workflow now runs on all branches for comprehensive CI coverage
- Dependency submission still only runs on main branch pushes for security

* Create codeql.yml

* Create greetings.yml

* Create label.yml

* Create dependency-review.yml

* Fix GitHub workflows: Remove dependency submission and enable all branches

- Remove problematic maven-dependency-submission-action that causes 403 errors
- Configure all workflows to run on all branches (not just main)
- Add proper permissions and improve Maven workflow with formatting and testing
- Keep CodeQL and dependency-review workflows for security scanning
- Ensure reliable CI/CD pipeline without permission i